--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,3 @@
-title: Minimal theme
-logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
-show_downloads: true
-google_analytics:
+title: Edward Jones-Healey
+logo: /assets/img/profile_pic.jpg
 theme: jekyll-theme-minimal
